<resources>
    <string name="app_name">Orders</string>
    <string name="type_product_name">Type product name</string>
    <string name="type_product">Type product name</string>
    <string name="type_price_of_product">Type price of product</string>
    <string name="type_stock_product">Type stock product</string>
    <string name="save_product">Save product</string>
    <string name="emp_no">Emp No</string>
    <string name="to_date">To Date</string>
    <string name="save">Save</string>
    <string name="from_date">From Date</string>
    <string name="product_price">product_price</string>
    <string name="product_stock">product_stock</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="description">Type the description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_order_list">Orders</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="date">Date</string>
    <string name="customer">Customer</string>
    <string name="method_payment">Method Payment</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="lastname">Lastname</string>
    <string name="name_supplier">Supplier</string>
    <string name="type">Type</string>
    <string name="supplier">Supplier</string>
    <string name="total_sale">Total</string>
    <string name="total">Total</string>
    <string name="date_sale">Date</string>
    <string name="name_movie">Movie</string>
    <string name="director_movie">Director</string>
    <string name="clasification">Clasification</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>

</resources>
