<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/crv_supplier"
    android:layout_margin="@dimen/card_margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txv_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_supplier"
            android:textSize="15pt"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_delete_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/btn_edit"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/delete"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_lastname_supplier"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_product"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/lastname"
            android:textSize="10pt"

            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_supplier" />

        <TextView
            android:id="@+id/txv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_lastname"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/type"
            android:textSize="10pt"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_lastname_supplier" />

        <ImageButton
            android:id="@+id/btn_edit_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/edit"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete_supplier" />


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>